cmake_minimum_required(VERSION 3.0)
project(Daemon VERSION 0.1 LANGUAGES CXX)
set(PROJECT_NAME "Daemon")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED on)
add_executable(main main.cpp ./libs/aes256.cpp)
find_package( Boost COMPONENTS program_options REQUIRED )
# target_include_directories( main PRIVATE ${Boost_INCLUDE_DIR})
# target_link_libraries( main ${Boost_LIBRARIES} )
set(Boost_USE_STATIC_LIBS        ON)  # only find static libs
set(Boost_USE_DEBUG_LIBS        OFF)  # ignore debug libs and
set(Boost_USE_RELEASE_LIBS       ON)  # only find release libs
set(Boost_USE_MULTITHREADED      ON)
set(Boost_USE_STATIC_RUNTIME    OFF)
include_directories(./libs)
# link_libraries(./main.cpp)
set(SOURCE_EXE main.cpp)
set(SOURCE main.cpp ./libs/aes256.cpp)
FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(main ${Boost_LIBRARIES})